# squad-adversarial-grpo

./: .cursorignore  .gitignore  README.md  main.py  pyproject.toml
src/config/: main_config.yaml
src/config/dataset/: squad.yaml
src/example/: run_model.py  run_model_batch.py
src/notebooks/: grpo_training.ipynb  grpo_training.py
src/scripts/: augment_with_inference.py  sample_dataset.py
src/utils/: bert.py  datasets.py  inference.py  openai_model.py  rewards.py  string.py  string_utils.py
